--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(imgs/fundo1.png);
+    background-image: url(../imgs/fundo1.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
