--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(imgs/fundo1.png);
+    background-image: url(https://aryelanne.netlify.app/imgs/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -32,7 +32,7 @@ main{
 .calculadora{
     width: min-content;
     padding:10px 10px;
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: #090909;
     border-radius: 7px;
     margin: 0 auto;
     margin-top: 70px;
@@ -53,7 +53,7 @@ table{
 .calculadora td button{
     border: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #041d87;
+    background-color: #2a2a2a;
     color: #fff;
     border-radius: 5px;
     width: 40px;
@@ -62,13 +62,14 @@ table{
     cursor: pointer;
 }
 .calculadora td button:hover{
-    background-color: #0209d9;
-    box-shadow: inset 0 0 2em #000b3e;
+    background-color: #14002D;
+    box-shadow: inset 0 0 2em #100320;
     transition: 0.5s;
 }
 .calculadora td button.igual{
     width: 40px;
     height: 86px;
+    background-color: #D914D6;
 }
 .calculadora td button.zero{
     width: 86px;
@@ -78,12 +79,12 @@ table{
     text-align: right;
     padding-right: 10px;
     width:180px;
-    height: 30px;
+    height: 40px;
     background-color: rgb(14, 14, 14);
     border-radius: 5px;
     margin:5px;
-    color:#00a1ff;
+    margin-top: 20px;
+    color:#D914D6;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-top: 3px;
-    box-shadow: inset 0 0 1em black;
 }
